Authorization + Reactive routes helpers (#42)
* Add create/retrieve users API + Roles

* Add support to rxJava in commons package

* Support multi-tenant/realm

- support multiple realms
- support multiple programming flavors on auth as mutiny, futures or rxJava
- Add jacoco coverage
