# backend/authn/src/main/java/com/micifuz/authn/handlers/OauthHandler.java
@@ -1,13 +1,13 @@
 package com.micifuz.authn.handlers;
 
-import static com.micifuz.commons.handlers.CheckBasicAuthHandler.CLIENT_ID;
-import static com.micifuz.commons.handlers.CheckBasicAuthHandler.SECRET;
+import static com.micifuz.commons.handlers.impl.CheckBasicAuthHandlerImpl.CLIENT_ID;
+import static com.micifuz.commons.handlers.impl.CheckBasicAuthHandlerImpl.SECRET;
 
 import javax.enterprise.context.ApplicationScoped;
-
-import org.eclipse.microprofile.config.inject.ConfigProperty;
+import javax.inject.Inject;
 
 import com.micifuz.authn.model.Credentials;
+import com.micifuz.authn.utils.RealmUtils;
 
 import io.vertx.core.json.Json;
 import io.vertx.ext.web.RoutingContext;
@@ -16,14 +16,14 @@ import io.vertx.ext.web.Session;
 @ApplicationScoped
 public class OauthHandler {
 
-    @ConfigProperty(name = "quarkus.oidc.auth-server-url")
-    String oauthServerUrl;
+    @Inject
+    RealmUtils realmUtils;
 
     public void createAccessToken(RoutingContext ctx) {
         Session session = ctx.session();
         String clientId = session.get(CLIENT_ID);
         String secret = session.get(SECRET);
-        Credentials credentials = new Credentials(oauthServerUrl, clientId, secret, ctx.request());
+        Credentials credentials = new Credentials(realmUtils.getOauthServerURL(clientId), clientId, secret, ctx.request());
         ctx.response().putHeader("content-type", "application/json").end(Json.encode(credentials.createAccessToken()));
     }
 }
